--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.6",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.28.14",
-    "next": "13.4.0",
+    "next": "14.2.2",
     "react": "^18.2.0",
     "react-dom": "^18",
     "viem": "2.x",
     "wagmi": "^2.5.18"
   },
   "devDependencies": {
+    "@splinetool/react-spline": "^2.2.6",
     "@types/node": "^20",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18",
@@ -28,6 +30,7 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.91.0"
   }
 }
