--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,36 +1,49 @@
 {
   "name": "web",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.6",
-    "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.1.2",
-    "@rainbow-me/rainbowkit": "^2.0.5",
-    "@tanstack/react-query": "^5.28.14",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.32.0",
+    "@web3modal/siwe": "^4.1.11",
+    "@web3modal/wagmi": "^4.1.11",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
+    "siwe": "^2.3.2",
     "viem": "2.x",
-    "wagmi": "^2.5.18"
+    "wagmi": "^2.6.0"
   },
   "devDependencies": {
-    "@splinetool/react-spline": "^2.2.6",
-    "@types/node": "^20",
-    "@types/react": "^18.2.42",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3",
     "webpack": "^5.91.0"
   }
 }
