--- a/.github/workflows/ghpage.yaml
+++ b/.github/workflows/ghpage.yaml
@@ -37,12 +37,12 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install 
-steps:
-      - name: Set WalletConnect Project ID
-        with: 
+        
+      - name: Set env
+        env: 
           NEXT_PUBLIC_PROJECT_ID: ${{secrets.NEXT_PUBLIC_PROJECT_ID}}
-        env:
-          NEXT_PUBLIC_PROJECT_ID: ${{secrets.NEXT_PUBLIC_PROJECT_ID}}  
+        run: echo "${{secrets.NEXT_PUBLIC_PROJECT_ID}}"
+
       - name: Build my App
         run: pnpm run build
 
