--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -26,6 +26,30 @@
             "sizes": "144x144",
             "type": "image/webp",
             "purpose": "any"
+        },
+        {
+            "src": "/Albert.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/Jake.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/Solo.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/Sophia.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
         }
     ],
     "theme_color": "#3367D6",
