--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,12 +19,15 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.32.0",
+    "@types/react-swipeable-views-utils": "^0.13.7",
     "@web3modal/siwe": "^4.1.11",
     "@web3modal/wagmi": "^4.1.11",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "siwe": "^2.3.2",
     "viem": "2.x",
     "wagmi": "^2.6.0"
@@ -33,6 +36,7 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
+    "@types/react-swipeable-views": "^0.13.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.19",
