--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,17 +20,15 @@
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.32.0",
     "@types/react-swipeable-views-utils": "^0.13.7",
-    "@web3modal/siwe": "^4.1.11",
-    "@web3modal/wagmi": "^4.1.11",
+    "connectkit": "^1.7.3",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
-    "siwe": "^2.3.2",
-    "viem": "2.x",
-    "wagmi": "^2.6.0"
+    "viem": "~2.9.28",
+    "wagmi": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
