--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.32.0",
     "@types/react-swipeable-views-utils": "^0.13.7",
+    "@wagmi/core": "^2.9.5",
     "connectkit": "^1.7.3",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "swiper": "^11.1.1",
     "viem": "~2.9.28",
     "wagmi": "^2.8.5"
   },
