--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@ducanh2912/next-pwa": "^10.2.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@ethersproject/abi": "^5.7.0",
     "@headlessui/react": "^2.0.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
@@ -23,6 +24,7 @@
     "@types/react-swipeable-views-utils": "^0.13.7",
     "@wagmi/core": "^2.9.5",
     "connectkit": "^1.7.3",
+    "ethers": "^5.0.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
